syntax = "proto3";

package dalalstreet.api.actions;

option java_multiple_files=true;

message RegisterRequest{
    string email = 1;
    string password = 2;
    string user_name = 3;
    string full_name = 4;
    string country = 5;
    string fingerprint = 6;
}
message RegisterResponse{
    enum StatusCode {
        OK = 0;
        InternalServerError = 1;
    AlreadyRegisteredError = 2;
    UnverifiedUserError = 3;
    FingerprintExistsError = 4;
    }
    StatusCode status_code = 1;
    string     status_message = 2;

}
